--- a/src/main/resources/public/template/role/roleList.html
+++ b/src/main/resources/public/template/role/roleList.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-</head>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <body>
-    <table class="z-list-table">
-        <thead class="z-list-head">
-            <tr class="flex-row align-items-center">
-                <th style="width:25%;" class="align-left" th:text="#{role.label.name}"></th>
-                <th style="width:25%;" class="align-left" th:text="#{role.label.id}"></th>
-                <th style="width:50%;" class="align-left" th:text="#{role.label.desc}"></th>
-            </tr>
-        </thead>
-        <tbody class="z-list-body">
-        <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(roleList)}">
-            <td style="width:100%" colspan="3" class="align-center" th:text="#{common.msg.noData}"></td>
+<table class="z-list-table">
+    <thead class="z-list-head">
+        <tr class="flex-row align-items-center">
+            <th style="width:25%;" class="align-left" th:text="#{role.label.name}"></th>
+            <th style="width:25%;" class="align-left" th:text="#{role.label.id}"></th>
+            <th style="width:50%;" class="align-left" th:text="#{role.label.desc}"></th>
         </tr>
-            <tr class="flex-row align-items-center" th:each="role : ${roleList}">
-                <td style="width:25%;" class="align-left" th:id="${role.roleId}" name="roleName" th:text="${role.roleName}"></td>
-                <td style="width:25%;" class="align-left" id="roleId" name="roleId" th:text="${role.roleId}"></td>
-                <td style="width:50%;" class="align-left" id="roleDesc" name="roleDesc" th:text="${role.roleDesc}"></td>
-            </tr>
-        </tbody>
-    </table>
+    </thead>
+    <tbody class="z-list-body">
+    <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(roleList)}">
+        <td style="width:100%" colspan="3" class="align-center" th:text="#{common.msg.noData}"></td>
+    </tr>
+        <tr class="flex-row align-items-center" th:each="role : ${roleList}">
+            <td style="width:25%;" class="align-left underline">
+                <a sec:authorize="!hasAuthority('notice.update')" th:text="${role.roleName}"
+                   th:href="@{/roles/{id}/view(id=${role.roleId})}">
+                </a>
+                <a sec:authorize="hasAuthority('notice.update')" th:text="${role.roleName}"
+                   th:href="@{/roles/{id}/edit(id=${role.roleId})}"></a>
+            </td>
+            <td style="width:25%;" class="align-left" id="roleId" name="roleId" th:text="${role.roleId}"></td>
+            <td style="width:50%;" class="align-left" id="roleDesc" name="roleDesc" th:text="${role.roleDesc}"></td>
+        </tr>
+    </tbody>
+</table>
+<th:block th:insert="layout/itsm/fragment/totalCountFragment :: totalCountDataFragment"></th:block>
 </body>
 </html>
