--- a/src/main/resources/public/scss/template/_paging.scss
+++ b/src/main/resources/public/scss/template/_paging.scss
@@ -5,27 +5,29 @@
  * @author Jung Hee Chan
  */
 // TODO 리스트 페이지 디자인 적용 시 정리 필요.
-.z-itsm-container .#{$common-prefix}paging-area {
+.z-itsm-container .z-page-paging {
   background-color: #FAFAFA;
 }
 
-.#{$common-prefix}paging-area {
+.z-page-paging {
+  display: flex;
+  flex-direction: row!important;
   padding: 0 3.75rem 1.875rem 3.75rem; // 0 60px 30px 60px
   justify-content:center;
   font-family: $font-family-s;
   font-size: $font-size-xs;
   line-height: 1.5rem;
 
-  a.#{$common-prefix}paging-arrow {
+  a.z-paging-arrow {
     cursor: text;
     &.active {
-      span.#{$common-prefix}icon {
+      span.z-icon {
         background: $paging-arrow-icon-active-color;
       }
       cursor: pointer;
     }
 
-    .#{$common-prefix}icon {
+    .z-icon {
       &.i-paging-start-arrow {
         @include maskImage('#{$icon-folder-path}paging/icon_paging_arrow_start.svg', 1.5rem, 1.5rem, no-repeat, center, null, $paging-arrow-icon-inactive-color); // 24px 24px
       }
@@ -41,7 +43,7 @@
     }
   }
 
-  .#{$common-prefix}paging-numbers {
+  .z-paging-numbers {
     a {
       display: inline-block;
       min-width: 1.5rem; // 24px
