--- a/src/main/resources/public/scss/template/mixins/_layout.scss
+++ b/src/main/resources/public/scss/template/mixins/_layout.scss
@@ -118,72 +118,79 @@
 }
 // pagingListTemplate
 @mixin pagingListTemplate() {
-  .z-list {
-    &-content {
-      display: flex;
-      flex: 1; // flex: 1 1 0;
-      a, button { cursor: pointer; }
-    }
-    // 테이블
-    &-table {
-      position: relative;
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-      border: none;
-    }
-    // thead
-    &-head {
-      tr {
-        height: 2.5rem; // 42px
-        th {
-          font-size: $font-size-s;
-          font-weight: $font-weight-medium;
-          color: $list-head-font-size;
-          padding: 0 0.9375rem; // 0 15px
+  .z-page-list {
+    display: flex;
+    flex: 1;  // flex: 1 1 0;
+    padding-top: 0.9375rem; // 15px
+    padding-bottom: 0.9375rem; // 15px
+    .z-list {
+      &-content {
+        display: flex;
+        flex: 1; // flex: 1 1 0;
+        a, button { cursor: pointer; }
+      }
+      // 테이블
+      &-table {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        border: none;
+      }
+      // thead
+      &-head {
+        tr {
+          height: 2.5rem; // 42px
+          th {
+            font-size: $font-size-s;
+            font-weight: $font-weight-medium;
+            color: $list-head-font-size;
+            padding: 0 0.9375rem; // 0 15px
 
-          &:first-child { padding-left: 1.25rem; } // 20px
+            &:first-child { padding-left: 1.25rem; } // 20px
+          }
         }
       }
-    }
-    // tbody
-    &-body {
-      width: 100%;
-      height: 100%;
-      border-top: 0.125rem solid $gray300; // 2px
-      border-bottom: 0.0625rem solid $gray300; // 1px
-      tr {
-        height: 2.8125rem; // 45px
-        // 마우스 오버시 배경 색상
-        &:hover { background-color: $list-hover-bg-color; }
-        // 선택된 경우
-        &.active {
-          background-color: $list-active-bg-color;
-          td { color: $list-active-font-color; }
+      // tbody
+      &-body {
+        width: 100%;
+        height: 100%;
+        border-top: 0.125rem solid $gray300; // 2px
+        border-bottom: 0.0625rem solid $gray300; // 1px
+        tr {
+          height: 2.8125rem; // 45px
+          // 마우스 오버시 배경 색상
+          &:hover { background-color: $list-hover-bg-color; }
+          // 선택된 경우
+          &.active {
+            background-color: $list-active-bg-color;
+            td { color: $list-active-font-color; }
+          }
+          td {
+            font-size: $font-size-xs;
+            font-weight: $font-weight-regular;
+            color: $gray800;
+            padding: 0 0.9375rem; // 0 15px
+            line-height: initial; // 소문자 글자 짤림현상 방지
+
+            &:first-child { padding-left: 1.25rem; } // 20px
+
+            a { color: map-get($grays, "dark"); }
+          }
         }
-        td {
-          font-size: $font-size-xs;
-          font-weight: $font-weight-regular;
-          color: $gray800;
-          padding: 0 0.9375rem; // 0 15px
-          line-height: initial; // 소문자 글자 짤림현상 방지
-
-          &:first-child { padding-left: 1.25rem; } // 20px
-
-          a { color: map-get($grays, "dark"); }
+        // 데이터 없을때
+        .no-data-found-list {
+          background-color: $no-data-found-list-bg;
+          pointer-events: none;
         }
       }
-      // 데이터 없을때
-      .no-data-found-list {
-        background-color: $no-data-found-list-bg;
-        pointer-events: none;
+      // tree
+      &-tree {
+        height: 37.88rem; // 606px
       }
-    }
-    // tree
-    &-tree {
-      height: 37.88rem; // 606px
     }
   }
+
 }
 // list
 /*
