--- a/src/main/resources/public/template/layout/itsm/itsmLayout.html
+++ b/src/main/resources/public/template/layout/itsm/itsmLayout.html
@@ -5,22 +5,19 @@
 <head>
 	<title layout:title-pattern="$LAYOUT_TITLE : $CONTENT_TITLE">Zenius ITSM</title>
 	<th:block th:insert="layout/itsm/itsmHead :: itsmHead"></th:block>
-	<th:block layout:fragment="pageHead"></th:block>
 </head>
+<th:block layout:fragment="pageHead"></th:block>
 <body>
 <div class="z-wrapper">
-	<div class="z-itsm-container flex-row">
-		<!-- 왼쪽 메뉴 -->
+	<div class="z-itsm-container">
+		<!--/* 왼쪽 메뉴 */-->
 		<div th:replace="layout/itsm/fragment/navigationFragment"></div>
-		<div class="z-main flex-column">
-			<!-- 상단 메뉴 -->
+		<!--/* 오른쪽 메인 */-->
+		<div class="z-main">
+			<!--/* 상단 메뉴 */-->
 			<div th:replace="layout/itsm/fragment/topMenuFragment">topMenu</div>
-			<div class="z-main-page flex-column">
-				<!-- 페이지별 타이틀 -->
-				<div layout:fragment="pageTitle" class="z-page-title flex-row align-items-baseline"></div>
-				<!-- 페이지별 컨텐츠 -->
-				<div layout:fragment="pageContent"></div>
-			</div>
+			<!--/* 페이지별로 달라지는 메인 컨텐츠 */-->
+			<th:block layout:fragment="mainContent"></th:block>
 		</div>
 	</div>
 </div>
