--- a/src/main/resources/public/template/layout/portal/fragment/pagingAreaFragment.html
+++ b/src/main/resources/public/template/layout/portal/fragment/pagingAreaFragment.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <div class="z-paging-area flex-row">
+    <div class="z-page-paging">
         <a href="" id="pagingStartArrow" class="z-paging-arrow flex-row"><span class="z-icon i-paging-start-arrow"></span></a>
         <a href="" id="pagingPrevArrow" class="z-paging-arrow flex-row"><span class="z-icon i-paging-prev-arrow"></span></a>
         <div class="z-paging-numbers"></div>
