--- a/src/main/resources/public/template/layout/topMenu.html
+++ b/src/main/resources/public/template/layout/topMenu.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <body>
-        <div class="z-top">
+        <div class="z-main-top">
             <div class="flex-row justify-content-end">
                 <span class="z-notification">
                     <span class="z-icon-notification" onclick="toggleNotificationContainer();">
