--- a/src/main/resources/public/template/notice/noticeList.html
+++ b/src/main/resources/public/template/notice/noticeList.html
@@ -29,9 +29,9 @@
             </td>
             <td style="width:5%;" class="align-center" th:unless="${topNotice.popYn}"></td>
             <td style="width:10%;" class="align-center" th:text="${topNotice?.createUserName}"></td>
-            <td style="width:20%;" class="align-left date-time" name="popDt" th:text="${topNotice.popStartDt} + '~' + ${topNotice.popEndDt}"></td>
-            <td style="width:20%;" class="align-left date-time" name="noticeDt" th:text="${topNotice.topNoticeStartDt} + '~' + ${topNotice.topNoticeEndDt}"/>
-            <td style="width:15%;" class="align-left date-time" name="createDt" th:text="${topNotice.createDt}"></td>
+            <td style="width:20%;" class="align-left date-time" th:text="${topNotice.popStartDt} + '~' + ${topNotice.popEndDt}"></td>
+            <td style="width:20%;" class="align-left date-time" th:text="${topNotice.topNoticeStartDt} + '~' + ${topNotice.topNoticeEndDt}"></td>
+            <td style="width:15%;" class="align-left date-time" th:text="${topNotice.createDt}"></td>
         </tr>
         <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(noticeList)}">
             <td style="width:100%" colspan="6" class="align-center" th:text="#{common.msg.noData}"></td>
@@ -50,9 +50,9 @@
             </td>
             <td style="width:5%;" class="align-center" th:unless="${notice.popYn}"></td>
             <td style="width:10%;" class="align-center" id="userName" th:text="${notice?.createUserName}"></td>
-            <td style="width:20%;" class="align-left date-time" name="popDt" th:text="${notice.popStartDt} + '~' + ${notice.popEndDt}"></td>
-            <td style="width:20%;" class="align-left date-time" name="noticeDt" th:text="${notice.topNoticeStartDt} + '~' + ${notice.topNoticeEndDt}"></td>
-            <td style="width:15%;" class="align-left date-time" name="createDt" th:text="${notice.createDt}"></td>
+            <td style="width:20%;" class="align-left date-time" th:text="${notice.popStartDt} + '~' + ${notice.popEndDt}"></td>
+            <td style="width:20%;" class="align-left date-time" th:text="${notice.topNoticeStartDt} + '~' + ${notice.topNoticeEndDt}"></td>
+            <td style="width:15%;" class="align-left date-time" th:text="${notice.createDt}"></td>
         </tr>
     </tbody>
 </table>
